--- a/index.html
+++ b/index.html
@@ -8,33 +8,73 @@
   
   <title>Frontend Mentor | FAQ Accordion Card</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <!-- linking external style sheet -->
+  <link rel="stylesheet" href="./src/styles.css">
+
 </head>
 <body>
-  How many team members can I invite?
-  You can invite up to 2 additional users on the Free plan. There is no limit on 
-  team members for the Premium plan.
+  <main>
+    <div></div>
+    <section>
+      <h1>FAQ</h1>
+      <div>
+        <article>
+          <h6>How many team members can I invite?</h6>
+          <img src="./images/icon-arrow-down.svg" alt="">
+        </article>
+        <p>You can invite up to 2 additional users on the Free plan. There is no limit on 
+          team members for the Premium plan.
+        </p>
+        <hr />
+      </div>
+      <div>
+        <article>
+          <h6>What is the maximum file upload size?</h6>
+          <img src="./images/icon-arrow-down.svg" alt="">
+        </article>
+        <p>No more than 2GB. All files in your 
+          account must fit your allotted storage space.
+        </p>
+        <hr />
+      </div>
+      <div>
+        <article>
+          <h6>How do I reset my password?</h6>
+          <img src="./images/icon-arrow-down.svg" alt="">
+        </article>
+        <p>Click “Forgot password” from the login page or “Change password” from your profile page.
+          A reset link will be emailed to you.
+        </p>
+        <hr />
+      </div>
+      <div>
+        <article>
+          <h6>Can I cancel my subscription?</h6>
+          <img src="./images/icon-arrow-down.svg" alt="">
+        </article>
+        <p>Yes! Send us a message and we’ll process 
+          your request no questions asked.
+        </p>
+        <hr />
+      </div>
+      <div>
+        <article>
+          <h6>Do you provide additional support?</h6>
+          <img src="./images/icon-arrow-down.svg" alt="">
+        </article>
+        <p>Chat and email support is available 24/7. 
+          Phone lines are open during normal business hours.
+        </p>
+        <hr />
+      </div>
+    </section>
+  </main>
 
-  What is the maximum file upload size?
-  No more than 2GB. All files in your account must fit your allotted storage space.
+  <footer class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" rel="noopener" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="https://emmanuel-obiora.github.io/portfolio-about-me-/src" rel="noopener" target="_blank">Obiora Emmanuel</a>.
+  </footer>
 
-  How do I reset my password?
-  Click “Forgot password” from the login page or “Change password” from your profile page.
-  A reset link will be emailed to you.
-
-  Can I cancel my subscription?
-  Yes! Send us a message and we’ll process your request no questions asked.
-
-  Do you provide additional support?
-  Chat and email support is available 24/7. Phone lines are open during normal business hours.
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  <script src="./script.js"></script>
 </body>
 </html>
