--- a/index.html
+++ b/index.html
@@ -14,59 +14,16 @@
 </head>
 <body>
   <main>
-    <div></div>
-    <section>
-      <h1>FAQ</h1>
-      <div>
-        <article>
-          <h6>How many team members can I invite?</h6>
-          <img src="./images/icon-arrow-down.svg" alt="">
-        </article>
-        <p>You can invite up to 2 additional users on the Free plan. There is no limit on 
-          team members for the Premium plan.
-        </p>
-        <hr />
+    <div class="image-wrapper">
+      <div class="wraps">
+        <span class="wraps_inner"></span>
       </div>
-      <div>
-        <article>
-          <h6>What is the maximum file upload size?</h6>
-          <img src="./images/icon-arrow-down.svg" alt="">
-        </article>
-        <p>No more than 2GB. All files in your 
-          account must fit your allotted storage space.
-        </p>
-        <hr />
-      </div>
-      <div>
-        <article>
-          <h6>How do I reset my password?</h6>
-          <img src="./images/icon-arrow-down.svg" alt="">
-        </article>
-        <p>Click “Forgot password” from the login page or “Change password” from your profile page.
-          A reset link will be emailed to you.
-        </p>
-        <hr />
-      </div>
-      <div>
-        <article>
-          <h6>Can I cancel my subscription?</h6>
-          <img src="./images/icon-arrow-down.svg" alt="">
-        </article>
-        <p>Yes! Send us a message and we’ll process 
-          your request no questions asked.
-        </p>
-        <hr />
-      </div>
-      <div>
-        <article>
-          <h6>Do you provide additional support?</h6>
-          <img src="./images/icon-arrow-down.svg" alt="">
-        </article>
-        <p>Chat and email support is available 24/7. 
-          Phone lines are open during normal business hours.
-        </p>
-        <hr />
-      </div>
+      <img src="./images/illustration-box-desktop.svg" class="box" alt="">
+    </div>
+
+    <section class="faq-section">
+      <h1 class="faq-section-head">FAQ</h1>
+      <div id="dynamicFaq" class="question-section"></div>
     </section>
   </main>
 
